# openclaw-orchestration

./: .coveragerc  .dockerignore  .env.example  .gitignore  BACKLOG.md  BACKLOG_DONE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GOAL_BRAIN.md  LICENSE  MAINLINE_PLAN.md  MILESTONES.md  PREDICTION_MARKETS_RESEARCH_SUMMARY.md  README.md  ROADMAP.md  SOURCES.md  STEAL_LIST.md  VISION.md  docker-compose.yml  factory_audit_v2.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: fixture-workloads.json
deploy/: poe-heartbeat.service  poe-inspector.service  poe-telegram.service
docs/: ADAPTIVE_EXECUTION_DESIGN.md  ADVERSARIAL_VERIFICATION_SYNTHESIS.md  ANTHROPIC_HARNESS_RESEARCH.md  ARCHITECTURE.md  ARCHITECTURE_NON_GOALS.md  ARCHITECTURE_OVERVIEW.md  BACKWARD_COMPATIBILITY.md  BITTER_LESSON_ANALYSIS.md  BURNIN_2026-07-02.md  CAPTAINS_LOG_EVENTS.md  CODING_NOTES.md  CONSTRAINT_ORCHESTRATION_AUDIT.md  CONSTRAINT_ORCHESTRATION_DESIGN.md  CONSTRAINT_ORCHESTRATION_REVIEW.md  CONVENTIONS.md  DRIVER_AND_WATCHER.md  DUMB_LOOP_AUDIT.md  END_TO_END.md  EXECUTION_FLOW.md  FACTORY_AI_RESEARCH.md  FACTORY_MODE_FINDINGS.md  GITHUB_LABELS.md  GROK_REVIEW_2026-03-26.md  INTENT_RESOLUTION_DESIGN.md  KNOWLEDGE_CRYSTALLIZATION.md  LENSES.md  LOCAL_VALIDATOR.md  LOOP_SCRATCHPAD.md  MEMENTO_SKILLS_RESEARCH.md  MEMORY_ARCHITECTURE.md  MIGRATION_GUIDE.md  NAVIGATOR_SCHEMA.md  PHASE_65_IMPLEMENTATION_PLAN.md  PHASE_AUDIT.md  PUBLISH_CHECKLIST.md  QUEUE_ADAPTER.md  REASSESS_DRIFT_GUARD.md  REASSESS_LINEAGE.md  RECALL_DESIGN.md  ROADMAP_ARCHIVE.md  (+21 more)
lat.md/: checkpointing.md  constraint-system.md  core-loop.md  intent-classification.md  lat.md  memory-system.md  poe-identity.md  quality-gates.md  self-improvement.md  worker-agents.md
personas/: README.md  builder.md  companion.md  creative-director.md  critic.md  director-proxy.md  finance-analyst.md  garrytan.md  health-researcher.md  jeremy.md  last30days-brief.md  legal-researcher.md  loop-validator.md  ops.md  plan-critic.md  poe.md  psyche-researcher.md  reality-checker-evidence-gate.md  reporter.md  research-assistant-deep-synth.md  scrapling-adaptive-web-recon.md  simplifier.md  strategist.md  summarizer.md  systems-design-architect-coach.md
projects/: .gitignore
research/: DECISION_FRAMEWORK_REFERENCE.md  JPM_ASK_DAVID_LANGCHAIN_INTERRUPT.md  PHASE41_TOOL_REGISTRY_DESIGN.md  PI_CODING_AGENT_SYNTHESIS.md  POLYMARKET_BTC_LAG_VALIDATION.md  PREDICTION_MARKETS_RESEARCH.md  QUICK_REFERENCE.md  README.md  SUPERFORECASTING_SYNTHESIS.md  TRADER_IMPLEMENTATION_GUIDE.md  X_LINKS_SYNTHESIS.md  analysis_framework.md  conversation-mining-2026-04-05.md  data_collection_template.sh  nootropics-rct-evidence.md
scripts/: adversarial-review.sh  audit-phases.sh  blind-test-slycrel.sh  build-loop.sh  enqueue.sh  factory_full_sim.py  factory_full_sim_v1.py  harvest_corpus.py  heartbeat-ctl.sh  import_link_farm.py  install-git-hooks.sh  local-validator.sh  mark_next_done.sh  new_project.sh  poe_export.py  scope_ab_runner.py  smoke.sh  test-cov.sh  test-safe.sh
skills/: arch-core-loop.md  arch-interface-routing.md  arch-memory-knowledge.md  arch-platform.md  arch-quality-selfimprove.md  code_implement.md  compact_notation.md  data_analysis.md  debug_investigate.md  resolve_ambiguity.md  test_skill_p32skill.md  updatable_skill.md  web_research.md
src/: agent_loop.py  ancestry.py  artifact_check.py  attribution.py  autonomy.py  backend_benchmark.py  background.py  backtest_metrics.py  backtester.py  boot_protocol.py  bootstrap.py  bootstrap_task.py  bughunter.py  build_loop_runner.py  captains_log.py  channels.py  checkpoint.py  claim_probe.py  claim_verifier.py  cli.py  cli_args.py  codebase_graph.py  compact_ab.py  conductor.py  config.py  constraint.py  conversation.py  convo_miner.py  correspondence.py  cross_ref.py  director.py  doctor.py  eval.py  evolver.py  factory_minimal.py  factory_thin.py  file_lock.py  gateway.py  gc_memory.py  goal_map.py  (+77 more)
tests/: conftest.py  test_ab_variants.py  test_agent_loop.py  test_ancestry.py  test_artifact_check.py  test_attribution.py  test_autonomy.py  test_backend_benchmark.py  test_background.py  test_boot_protocol.py  test_bootstrap_task.py  test_budget_gate.py  test_bughunter.py  test_build_loop_runner.py  test_build_loop_script.py  test_captains_log.py  test_channels.py  test_checkpoint.py  test_checkpoint_extended.py  test_claim_verifier.py  test_cli.py  test_codebase_graph.py  test_compact_ab.py  test_conductor.py  test_conductor_export.py  test_config.py  test_conftest_guard.py  test_constraint.py  test_conversation.py  test_convo_miner.py  test_correspondence.py  test_cross_ref.py  test_dag_executor.py  test_director.py  test_doctor.py  test_e2e_smoke.py  test_escalation.py  test_eval.py  test_event_router.py  test_evolver.py  (+91 more)
user/: COMPLETION_STANDARD.md  CONFIG.md  CONTEXT.md  GOALS.md  POE_IDENTITY.md  SIGNALS.md
workers/: handle.sh
(+104 files in other folders)
