[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maro-orchestration"
version = "0.5.0"
description = "File-first autonomous orchestration system"
requires-python = ">=3.10"
# Core system has no mandatory third-party deps — everything is graceful-ImportError guarded.

[project.optional-dependencies]
telegram = ["requests>=2.28", "python-telegram-bot>=20.0"]
slack = ["slack-sdk>=3.0"]
gateway = ["websockets>=12.0"]
sandbox = []
memory = ["pyyaml>=6.0"]
all = ["requests>=2.28", "pyyaml>=6.0", "websockets>=12.0", "slack-sdk>=3.0", "beautifulsoup4>=4.12"]
dev = ["pytest>=7.0", "pytest-cov>=7.0", "requests>=2.28", "beautifulsoup4>=4.12"]

[project.scripts]
maro = "cli:main"
maro-bootstrap = "bootstrap:main"
maro-run = "agent_loop:main"
maro-handle = "handle:main"
maro-enqueue = "handle:enqueue_main"
maro-memory = "cli:_memory_main"
maro-persona = "cli:_persona_main"
maro-sandbox = "cli:_sandbox_main"
maro-skills = "cli:_skills_main"
maro-inspector = "inspector:main"
maro-knowledge = "knowledge:main"
maro-observe = "observe:main"
maro-slack = "slack_listener:main"
maro-gc = "gc_memory:main"
maro-introspect = "introspect:main"
maro-graduation = "graduation:main"
maro-task = "task_store:main"
maro-doctor = "doctor:main"
maro-factory-minimal = "factory_minimal:main"
maro-factory-thin = "factory_thin:main"
maro-test = "bootstrap:_smoke_main"
maro-bughunter = "bughunter:main"
maro-schedule = "scheduler:main"
maro-verify = "verification_agent:main"
maro-thinkback = "thinkback:_cli_main"
maro-passes = "passes:_cli_main"
maro-cross-ref = "cross_ref:_cli_main"
maro-checkpoint = "checkpoint:_cli_main"
maro-stop = "killswitch:main"
maro-mine = "convo_miner:main"
maro-preflight-stats = "pre_flight:_preflight_stats_main"
maro-evolver = "evolver:main"
maro-replay = "strategy_evaluator:main"
maro-tool-costs = "tool_cost_report:main"
maro-benchmark = "backend_benchmark:main"
maro-log = "captains_log:main"
maro-repo-scan = "repo_scan:main"
maro-codebase-graph = "codebase_graph:main"
maro-harness-optimizer = "harness_optimizer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q -m 'not slow'"
markers = [
    "slow: tests that take >2s (agent loop integration, background waits, CLI subprocess)",
]
